--- a/index.html
+++ b/index.html
@@ -2,20 +2,25 @@
 <html lang="en">
     <head>
         <script>
+            const tax = 150;
+            let statement = "Be sure to check other instruments";
             function myFunction(){
             const guitar={strings:"seven", color: "red", price: 300, brand: "Fender"};
-            const tax = 150;
             let finalPrice = guitar.price + tax;
             document.getElementById("guitarPrice").innerHTML= guitar.color + " " + guitar.strings + " string "
             + guitar.brand + " guitar:" + "<br>" + "initial price: $" + guitar.price + "<br>" + "Tax: $" + tax + "<br>" +
-            "Final Price: $" + finalPrice;  
+            "Final Price: $" + finalPrice + "<br>" + "<br>" + statement;  
             }
+  
+
         </script> 
+
+
     </head>
 
     <body>
         <h1>JavaScript program</h1>
-        <h2>Step one:</h2>
+        <h2>Price checking:</h2>
         <button type="button" onclick="myFunction()">Check the price <br> for Red seven string guitar</button>
         <p id ="guitarPrice"></p>
 
