--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <script>
             const tax = 150;
-            let statement = "Be sure to check other instruments";
+            var statement = "Be sure to check other instruments"; //that's the string variable.
 
             function myFunction(){
-            const guitar={strings:"seven", color: "red", price: 300, brand: "Fender"};
-            let finalPrice = guitar.price + tax;
+            const guitar={strings:"seven", color: "red", price: 300, brand: "Fender"}; //guitar properties can't be used outside this function.
+            let finalPrice = guitar.price + tax; // block scope finalPrice for guitar can't be used outside this function.
             document.getElementById("guitarPrice").innerHTML= guitar.color + " " + guitar.strings + " string "
             + guitar.brand + " guitar:" + "<br>" + "initial price: $" + guitar.price + "<br>" + "Tax: $" + tax + "<br>" +
             "Final Price: $" + finalPrice + "<br>" + "<br>" + statement;  
@@ -36,7 +36,9 @@
         <button type="button" onclick="otherFunction()">Check the price <br> for Bass guitar</button>
         <p id ="bassPrice"></p>
 
-        
+        <script>
+            console.log ("const tax=150, let statement=be sure to check other instruments, Final Price=guitar.price/bass.bassPrice + tax, const guitar = {strings:'seven', color: 'red', price: 300, brand: 'Fender'}, const bass = {bassBrand:'Fender', bassPrice: 200};");
+            </script>
     
 
 
